[project]
name = "llm-url-markdown"
version = "0.1"
description = "Plugin for LLM that adds support for fetching markdown content from URLs using Jina Reader API"
readme = "README.md"
authors = [{name = "Saeed Esmaili"}]
license = {text = "Apache-2.0"}
classifiers = []
dependencies = [
    "llm>=0.24"
]
requires-python = ">=3.9"

[project.entry-points.llm]
url_markdown = "llm_url_markdown" 